@@ -83,6 +83,7 @@ Engine fixes:
 * Fixed bug where closing the game with the "Enter Amount" dialog open allowed for item duplication.
 * Added tooltips for stat and power upgrade buttons.
 * Fixed case where stash tabs could be switched while dragging an item.
+* The "Play Game" button on the title screen now goes directly to character creation if no saved games exist.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
